--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -208,12 +208,14 @@
 
 .signup-section {
      padding: 10rem 0;
-     background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.1)), color-stop(75%, rgba(22, 22, 22, 0.5)), to(#161616)), url("https://wagner-sousa.github.io/site-chiara-luce/img/bg-signup.jpg");
-     background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%), url("https://wagner-sousa.github.io/site-chiara-luce/img/bg-signup.jpg");
+     background-image: url("../img/bg-signup.jpg");
+     background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.1)), color-stop(75%, rgba(22, 22, 22, 0.5)), to(#161616)), url("../img/bg-signup.jpg");
+     background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%), url("../img/bg-signup.jpg");
      background-position: center;
      background-repeat: no-repeat;
      background-attachment: scroll;
      background-size: cover;
+     background-image: url("../img/bg-signup.jpg");
 }
 
 .signup-section .form-inline input {
