--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -207,14 +207,27 @@
 }
 
 .signup-section {
-     padding: 10rem 0;
-     background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.1)), color-stop(75%, rgba(22, 22, 22, 0.5)), to(#161616)), url(../img/bg-signup.jpg);
-     background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%), url(../img/bg-signup.jpg);
-     background-position: center;
+     padding: 8rem 0;
+     background:
+          -webkit-gradient(
+               linear,
+               left top, left bottom,
+               from(rgba(0,0,0,0.5)),
+               to(rgba(0,0,0,0.5))
+          ),
+          url("../img/bg-signup.jpg");
+     /*     background-image: url("../img/building-wallpaper.jpg");
      background-repeat: no-repeat;
      background-attachment: scroll;
+     background-position: center center;*/
      background-size: cover;
+     /*background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.1)), color-stop(75%, rgba(22, 22, 22, 0.5)), to(#161616)), url("../img/bg-signup.jpg");
+     background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%), url("../img/bg-signup.jpg");
+     background-position: center;
+     background-repeat: no-repeat;
+     background-size: cover;*/
 }
+
 
 .signup-section .form-inline input {
      -webkit-box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
