--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -209,10 +209,7 @@
 .signup-section {
      padding: 8rem 0;
      
-          background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.1)), color-stop(75%, rgba(22, 22, 22, 0.5)), to(#161616)), url("../img/bg-signup.jpg");
-     
-          background-image: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%), url("../img/bg-signup.jpg");
-
+background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.1)), to(#161616)), url("../img/bg-signup.jpg");
      
 /*     background-image:
           -webkit-gradient(
