--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -208,19 +208,14 @@
 
 .signup-section {
      padding: 8rem 0;
-     
-background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.1)), to(#161616)), url("../img/bg-signup.jpg");
-     
-/*     background-image:
+     background-image:
           -webkit-gradient(
                linear,
                left top, left bottom,
                from(rgba(0,0,0,0.5)),
                to(rgba(0,0,0,0.5))
           ),
-          url("../img/bg-signup.jpg");*/
-     
-     
+          url("../img/bg-signup.jpg");
      /*     background-image: url("../img/building-wallpaper.jpg");
      background-repeat: no-repeat;
      background-attachment: scroll;
