--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -212,8 +212,8 @@
           -webkit-gradient(
                linear,
                left top, left bottom,
-               from(rgba(0,0,0,0.5)),
-               to(rgba(0,0,0,0.5))
+               from(rgba(22, 22, 22, 0.1)),
+               to(#161616))
           ),
           url("../img/bg-signup.jpg");
      /*     background-image: url("../img/building-wallpaper.jpg");
