--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -215,7 +215,7 @@
                from(rgba(22, 22, 22, 0.1)),
                to(#161616))
           ),
-          url("../img/bg-signup.jpg");
+          url("../img/bg-contact.jpg");
      /*     background-image: url("../img/building-wallpaper.jpg");
      background-repeat: no-repeat;
      background-attachment: scroll;
