--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -208,16 +208,19 @@
 
 .signup-section {
      padding: 8rem 0;
-     background-image:
+/*     background-image:
           -webkit-gradient(
                linear,
                left top, left bottom,
                from(rgba(22, 22, 22, 0.1)),
                to(#161616))
           ),
-          url("../img/bg-contact.jpg");
-     /*     background-image: url("../img/building-wallpaper.jpg");
-     background-repeat: no-repeat;
+          url("../img/bg-contact.jpg");*/
+     
+     
+         background-image: url("../img/contact.jpg");
+     
+     /*background-repeat: no-repeat;
      background-attachment: scroll;
      background-position: center center;*/
      background-size: cover;
