--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -208,28 +208,16 @@
 
 .signup-section {
      padding: 8rem 0;
-/*     background-image:
-          -webkit-gradient(
-               linear,
-               left top, left bottom,
-               from(rgba(22, 22, 22, 0.1)),
-               to(#161616))
-          ),
-          url("../img/bg-contact.jpg");*/
-     
-     
-         background-image: url("../img/bg-masthead.jpg");
-     
      /*background-repeat: no-repeat;
      background-attachment: scroll;
      background-position: center center;*/
      background-size: cover;
      background-position: center;
-     /*background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.1)), color-stop(75%, rgba(22, 22, 22, 0.5)), to(#161616)), url("../img/bg-signup.jpg");
-     background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%), url("../img/bg-signup.jpg");
+     background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.1)), color-stop(75%, rgba(22, 22, 22, 0.5)), to(#161616)), url("../img/bg-masthead.jpg");
+     background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%), url("../img/bg-masthead.jpg");
      background-position: center;
      background-repeat: no-repeat;
-     background-size: cover;*/
+     background-size: cover;
 }
 
 
